changing photos from file system to blob db (byte array)